changed pointer to svg

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
         height: 60px;
         width: 60px;
         z-index: 1;
-        background-image: url(./pointer.png);
+        background-image: url(./pointer.svg);
         top: 0px;
         left: 0px;
         position: absolute;
