fix: added custom pointer

--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,13 @@
       #header {
         position: relative;
       }
+      body{
+        cursor: url(./pointer.svg),auto;
+      }
       .cursor {
         height: 60px;
         width: 60px;
         z-index: 1;
-        background-image: url(./pointer.svg);
         top: 0px;
         left: 0px;
         position: absolute;
